--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 
 # RStudio files
 .Rproj.user/
+*.Rproj
 
 # produced vignettes
 vignettes/*.html
@@ -45,3 +46,6 @@ docs/
 *.xml
 *.nc
 *.csv
+
+# Mac data
+*.DS_Store
