--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ ecoregions*
 
 # Figures until publication ready
 figures/plots
+
+# Do include csv files in certain subdirectories
+!BioCro/DARPA/temp_comparison/inputs/*.csv
+!BioCro/DARPA/env_comparison/inputs/*.csv
