--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ ecoregions*
 
 # Figures until publication ready
 figures/plots
+ED2/pfts/SRER_figs/
 
 # Do include csv files in certain subdirectories
 !BioCro/DARPA/temp_comparison/inputs/*.csv
